# klander

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
crds/: state-reconciler.yml
src/: global_reconciler.py  klander.py
src/global_reconciler_core/: kubectl.py  observer.py  reconciler.py  schema.py
src/klander_core/: kubectl.py  matcher.py  observer.py  reconciler.py  schema.py
tests/kubectl/: conftest.py  test_build_command.py  test_delete.py  test_get.py  test_resource_type.py  test_run.py  test_update.py
tests/kubectl/data/: __init__.py  commands.py  resource_type.py
tests/matcher/: data.py  test_pattern_matching.py
tests/observer/: conftest.py  test_get.py
tests/reconciler/: conftest.py  test_get_resources.py  test_reconciliation.py
tests/reconciler/data/: __init__.py  configmaps.py  jobs.py  pods.py  secrets.py  state_reconcilers.py
tests/reconciler/utils/: __init__.py  configmap.py  job.py  pod.py  secret.py
tests/schema/: test_validation.py  utils.py
tests/schema/data/: __init__.py  response.py  state_reconciler.py
www/: config.toml
www/content/: _index.md
www/content/docs/: getting-started.md  reconciliation-webhook.md  state-reconciler.md
www/layouts/: home.html
www/layouts/partials/: navbar.html
