[tool.poetry]
name = "global-reconciler"
version = "0.1.0"
description = "Audit Kubernetes cluster state and reconcile it"
authors = ["Link Society <contact@link-society.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.9"
jsonpath-ng = "^1.5.2"
requests = "^2.25.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
