[tool.poetry]
name = "klander"
version = "0.2.0"
description = "Audit Kubernetes cluster state and reconcile it"
authors = ["Link Society <contact@link-society.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.9"
jsonpath-ng = "^1.5.2"
requests = "^2.25.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]

markers = [
  "proc_exit_code: defines the exit code for the kubectl subprocess (defaults to 0)",
  "proc_output: defines the output for the kubectl subprocess (defaults to 'hello world')",
  "kubectl_get_raise: Error to raise when calling kubectl.get or None (defaults to None)"
]
